Little fixes